--- a/global.css
+++ b/global.css
@@ -47,7 +47,10 @@ h3        {
                         font-weight: bold; font-size: 14px; font-family: "Trebuchet MS",Verdana, Arial, Helvetica, sans-serif;
                         text-decoration: none; line-height : 120%; color : #000000;
 }
-
+.scroll-table{
+       overflow-x: scroll;
+       overflow-y: hidden;
+    }
 .outerTableColor2 { background-color: #620C00; }
 .outerTableColor { background-color: #660000; }
 .OddRow { background-color: #FFFFCC; }
