modify global.css header.php insert insert_into_user_legal.php update_user_legal.php user.php

--- a/global.css
+++ b/global.css
@@ -51,6 +51,12 @@ h3        {
        overflow-x: scroll;
        overflow-y: hidden;
     }
+.scroll-table-y{
+      display: block;
+	  height: 220px;
+	  overflow-y: scroll;
+    }
+
 .outerTableColor2 { background-color: #620C00; }
 .outerTableColor { background-color: #660000; }
 .OddRow { background-color: #FFFFCC; }
